RESOLVED FIXED307250
[iOS] REGRESSION (305399@main): Web process crashes when pasting DOM fragment with depth of ~100 elements in Mail compose
https://bugs.webkit.org/show_bug.cgi?id=307250
Summary [iOS] REGRESSION (305399@main): Web process crashes when pasting DOM fragment...
Wenson Hsieh
Reported 2026-02-07 14:00:22 PST
Attachments
Wenson Hsieh
Comment 1 2026-02-07 14:07:35 PST
EWS
Comment 2 2026-02-07 17:29:18 PST
Committed 307017@main (81f0e08ab7b0): <https://commits.webkit.org/307017@main> Reviewed commits have been landed. Closing PR #58126 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.