Source/WebCore/editing/ReplaceSelectionCommand.cpp
@@ -2034,7 +2034,8 @@ using ElementToStyleProperties = HashMap<Ref<StyledElement>, Vector<CSSPropertyI
         addStylesToRemove(*element);
 
     if (RefPtr container = dynamicDowncast<ContainerNode>(node)) {
-        for (Ref child : composedTreeChildren(*container)) {
+        static constexpr auto inlineCapacityToAvoidExceedingStackLimit = 0;
+        for (Ref child : composedTreeChildren<inlineCapacityToAvoidExceedingStackLimit>(*container)) {
             if (collectStylesToRemove(child, lastLeaf, backgroundLuminance, stylesToRemove) == IterationStatus::Done)
                 break;
         }
